css/mobile.css
.container {
    /* padding: 3em; */
    margin: 0;
    text-align: center;
    background-color: rgba(255, 255, 255, 0.5);
    color: rgba(61, 61, 61, .8);
}
ul{
    list-style-type: none;
    padding: .5em;
}
ul li {
    /* display: inline-block; */
    vertical-align: top;
    /* width: 30%; */
    /* margin: 1%; */
    border: solid 2px rgba(122, 122, 122, 0.8);
    border-radius: 5px;
}
h1, h2, h3, h4, h5, h6 {
    margin: 0;
    padding: 0;
    border-radius: 5px;
}
h2 {
    /* margin-top: 1em; */
    text-shadow: 2px -2px 5px rgba(61, 61, 61, .5);
}
.card {
    border-left: #dda0dd 4px solid;
    border-bottom:  #dda0dd 4px solid;
    border-radius: 5px;
    /* margin: 1em; */
    padding: 0;
    box-shadow: 4px -4px 10px rgba(61, 61, 61, .5);

}
.card-header {
    color: #fff;
    text-shadow: 3px -3px 5px rgba(120, 120, 120, .9);
    background-color: #dda0dd;
    border: solid 2px rgba(122, 122, 122, 0.5);
}
.card-body {
    margin-top: 1em;
    color: #fff;
    border: #dda0dd 2px solid;
    border-radius: 5px;
    background-color: rgba(122, 122, 122, 0.5);
}

